February 20, 2014
Version 0.4.5

Added details to the usage documentation for each tool which describes both
the output files and annotation fields.

output file and description
IgCore:
+ Features added for Change-O compatibility.
+ Features added for PairSeq performance improvements.
+ Added custom help formatter.
+ Modifications to internals of multiprocessing code.
+ Changed maximum consensus quality score from 93 to 90.
+ Fixed a few typos in error messages.

AssemblePairs:
+ Added more verbose logging.
+ Changed PVAL log field to PVALUE.
+ Changed HEADSEQ and TAILSEQ log fields to SEQ1 and SEQ2.
+ Changed HEADFIELDS and TAILFIELDS log fields to FIELDS1 and FIELDS2.
+ Changed precision of ERROR and PVALUE log fields.
+ Added support for cases where one mate pair is the subsequence of the other.
+ Added --scanrev flag to allow for head sequence to overhand end of tail.
+ Removed truncated (quick) error calculation in align subcommand.
+ Changed internal selection of top scoring alignment to use Z-score
  approximation rather than a combination of error rate and binomial
  mid-p value.
+ Added '-q (minimum quality score)' parameter to allow exclusion of low quality
  bases from scoring in align subcommand.
+ Added reference subcommand which uses V-region germline alignments from
  ublast to assemble paired-ends.
+ Internal changes to multiprocessing structure.
+ Changed inserted gap character from - to N in join subcommand for better
  compatibility with the behavior of IMGT/HighV-QUEST.

BuildConsensus
+ Fixed bug where low quality positions where not being masked in single
  sequence barcode groups.

CollapseSeq:
+ Added --keep flag to allow retention of sequences with high missing character
  counts in unique sequence output file.
+ Removed case insensitivity - requiring all sequences to have matching case.
+ Removed 'first' and 'last' from --act choices to avoid unexpected behavior.

MaskPrimers: